--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
 		</header>
 
 		<section class="section-hero">
-			<img src="assets/images/hero.jpg" alt="">
-
 			<div class="section__content">
 				<h1>Чудесен спорт за всеки и за навсякаде</h1>
 
@@ -78,8 +76,93 @@
 			<div class="section__content">
 				<h2>Видео с паркур изпълнения</h2>
 
-				<iframe width="1020" height="572" src="https://www.youtube.com/embed/LcCPtOrAkxU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="video">
+					<div class="video-container">
+						<iframe src="https://www.youtube.com/embed/LcCPtOrAkxU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
 			</div>
+		</section>
+
+		<section class="section-gallery">
+			<h3>Галерия</h3>
+
+			<ul>
+				<li>
+					<img src="assets/images/daoud-abismail-CILLYbhfWqM-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/sam-vogt-i9vJXO9niJs-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/gabriel-jimenez-n2D7rIyvsN8-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/zakaria-zayane-hX7S3yzYj2E-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/kal-visuals-fMIsAL72P3U-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/adam-dore-vBOoAWXGPbM-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/breakreate-9B_rqKcwUuQ-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/zakaria-zayane-Tbbmir_raiQ-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/douglas-bagg-1mbJ3m3osvc-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/daoud-abismail-tXC6y9U2gDc-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/jeremy-bishop-OD9nNRAyVTY-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/sergio-souza-pyklffyEcTY-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/jennifer-bedoya-FUA9Jgahwk0-unsplash.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/parkour-2258115_1920.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/parkour-1905069_1920.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/jump-4277839_1920.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/jump-4267055_1920.jpg" alt="Parkour image">
+				</li>
+
+				<li>
+					<img src="assets/images/athlete-4480045_1920.jpg" alt="Parkour image">
+				</li>
+
+			</ul>
+
+			<a href="#" class="button">Вижте още</a>
 		</section>
 
 		<section class="section-contacts">
@@ -132,7 +215,93 @@
 		</section>
 
 		<footer>
-			
+			<div class="shell">
+				<div class="footer__columns">
+					<div class="col-1">
+						<a href="#">
+							<img src="assets/images/logo.png" alt="Logo">
+						</a>
+
+						<p>
+							Парк̀ур (на латиница: parkour, от френското словосъчетание parcours du combattant – „преход на боеца“) е изкуството на преодоляване единствено с помощта на уменията на човешкото тяло на всякакви препятствия – природни и урбанистични – при прехода от точка А до точка Б.
+						</p>
+					</div>
+
+					<div class="col-2">
+						<h5>Нашата зала</h5>
+
+						<ul>
+							<li>
+								<img src="assets/images/icon-location_63.png" alt="icon-location">
+
+								<p>гр. Варна, ул. Владислав Варненчик 1 ет. 15, зала “Паркур”</p>
+							</li>
+
+							<li>
+								<img src="assets/images/icon-phone_66.png" alt="icon-phone">
+
+								<a href="tel:+359898111111">(+359) 898-11-11-11</a>
+							</li>
+						</ul>
+					</div>
+
+					<div class="col-3">
+						<h5>Информационен бюлетин</h5>
+
+						<form action="" method="post" class="form-subscribe">
+							<input type="email" name="email" placeholder="Email адрес за записване">
+
+							<input type="submit" name="button" value="Изпрати">
+						</form>
+
+						<ul class="socials">
+							<li>
+								<a href="#" target="_blank">
+									<span class="ico ico-facebook"></span>
+								</a>
+							</li>
+
+							<li>
+								<a href="#" target="_blank">
+									<span class="ico ico-twitter"></span>
+								</a>
+							</li>
+
+							<li>
+								<a href="#" target="_blank">
+									<span class="ico ico-youtube"></span>
+								</a>
+							</li>
+
+							<li>
+								<a href="#" target="_blank">
+									<span class="ico ico-instagram"></span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="copyright">
+					<ul>
+						<li>
+							<a href="#">Помощ</a>
+						</li>
+
+						<li>
+							<a href="#">Условия</a>
+						</li>
+
+						<li>
+							<a href="#">Поверителност</a>
+						</li>
+					</ul>
+
+					<p>
+						Copyright &copy; 2021 - Parkour
+					</p>
+				</div>
+			</div>
 		</footer>
 	</div>
 </body>
